[front][search] #161 WIP : correction de l’alignement des boutons de pagination

--- a/francoralite/apps/francoralite_front/static/francoralite_front/css/francoralite.css
+++ b/francoralite/apps/francoralite_front/static/francoralite_front/css/francoralite.css
@@ -761,6 +761,8 @@ main > header h1 {
     color: #6a0307;
 }
 .pagination .pages {
+    display: flex;
+    flex-flow: row wrap;
     text-align: right;
     font-size: 0;
 }
